# EEIA

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  security-scan.yml
config/: eeia_config.example.yaml  logging.example.yaml  secrets.example.env
docs/architecture/: EEIA_ARCHITECTURE_v1.0.md  EEIA_Architecture_Overview.md  threat_model.md
docs/architecture/diagrams/: README.md
docs/article/: EEIA_paper_en.md  EEIA_paper_ru.md
docs/operations/: deployment_guide.md  hardening_guide.md  incident_response_playbook.md
infra/: docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.worker
infra/k8s/: deployment.yaml  eeia-deployment.yaml  eeia-service.yaml  network_policies.yaml  service.yaml
infra/tooling/: makefile
specs/: EEIA-Core-v1.0.md  EEIA-Security-v1.0.md
specs/profiles/: EEIA-AKSRV-Profile-v1.0.md  EEIA-Generic-IoT-v1.0.md
src/eeia/: __init__.py
src/eeia/api/: http.py
src/eeia/connectivity/: coap_client.py  lorawan_ttn.py  mqtt_client.py  nbiot_client.py  zigbee_adapter.py  zwave_adapter.py
src/eeia/core/: api.py  cache.py  models.py  router.py
tests/integration/: test_http_api.py  test_http_ml_scoring.py  test_http_security.py  test_http_tracing.py  test_medical_flow.py  test_smart_city_flow.py  test_water_flow.py
tests/unit/: test_connectivity.py  test_core.py  test_edge_ml.py  test_governance.py  test_ledger.py  test_observability.py  test_packet_security.py  test_security.py
(+28 files in other folders)
