[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeia"
version = "0.1.0"
description = "Ethereal Edge Integrity Architecture"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0,<3.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
]