[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeia"
version = "0.1.0"
description = "Ethereal Edge Integrity Architecture"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0,<3.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

python_files = [
    "test_*.py",
]

python_classes = [
    "Test*",
]

python_functions = [
    "test_*",
]
